Prevent artist and album name overflow to break the layout

--- a/src/components/Artist/AlbumCard.module.scss
+++ b/src/components/Artist/AlbumCard.module.scss
@@ -35,6 +35,8 @@
   color: var(--color-on-surface-highlight);
   font-weight: 700;
   font-size: 1.375rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
 
   @media (max-width: $mobile-breakingpoint) {
     font-size: 1.125rem;
